--- a/css/index.css
+++ b/css/index.css
@@ -87,6 +87,7 @@ header{
     background-color: rgba(196, 196, 196, 0.1);
     position: fixed; /*상단고정*/
     order: 1;
+    z-index: 10;
 }
 /* -----LOGO */
 header h1{
@@ -392,7 +393,8 @@ header .shopping-icon .material-icons{
     background: url(../images/img/txt-bg-mo-1.png) no-repeat bottom;
     object-fit:cover;
     position: absolute;
-
+    min-width: 100%;
+    object-fit:cover;
 }
 .brand-text .inner img.brand-text-mo{
     position: absolute;
